tests/ui/pattern/deref-patterns/usefulness/empty-types.stderr
error[E0004]: non-exhaustive patterns: `deref!(Some(_))` not covered
  --> $DIR/empty-types.rs:21:11
   |
LL |     match box_opt_void {
   |           ^^^^^^^^^^^^ pattern `deref!(Some(_))` not covered
   |
note: `Box<Option<Void>>` defined here
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   = note: the matched value is of type `Box<Option<Void>>`
   = note: `Void` is uninhabited but is not being matched by value, so a wildcard `_` is required
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         deref!(Some(_)) => todo!()
   |

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/empty-types.rs:35:11
   |
LL |     match *box_opt_void {
   |           ^^^^^^^^^^^^^ pattern `Some(_)` not covered
   |
note: `Option<Void>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<Void>`
   = note: `Void` is uninhabited but is not being matched by value, so a wildcard `_` is required
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         Some(_) => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
